log
Sat 10 Sep 2022 01:15:13 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
657a4bb
Sat 10 Sep 2022 01:15:37 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
781f2ee
Sat 10 Sep 2022 01:48:03 AM UTC: 
 hashmap.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c:88:1: error: expected identifier or ‘(’ before ‘}’ token
   88 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
hashmap.c: In function ‘firstMap’:
hashmap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4bcb0c8
Sat 10 Sep 2022 01:48:23 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:87:3: error: expected identifier or ‘(’ before ‘return’
   87 |   return NULL;
      |   ^~~~~~
hashmap.c:88:1: error: expected identifier or ‘(’ before ‘}’ token
   88 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
hashmap.c: In function ‘firstMap’:
hashmap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c8b6557
Sat 10 Sep 2022 01:48:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
49c1ea4
Sat 10 Sep 2022 01:48:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ec3078d
Sat 10 Sep 2022 01:49:49 AM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  6|3
total_score: 40/70
98ec10b
Sat 10 Sep 2022 01:50:12 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  9|2
total_score: 50/70
7b36e12
Sat 10 Sep 2022 01:50:34 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  12|1
total_score: 60/70
411e61b
Sat 10 Sep 2022 01:50:52 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
3be39e9
Sat 10 Sep 2022 01:51:44 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
683920e
Sat 10 Sep 2022 01:54:54 AM UTC: 
 hashmap.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:71: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   47 |         if (is_equal(key, map->buckets[index]->key) == 1) return index= (index+1) % map->capacity;
      |                                                                  ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:43:6: note: declared here
   43 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
db9acfb
Sat 10 Sep 2022 01:55:05 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   47 |         if (is_equal(key, map->buckets[index]->key) == 1) return; index= (index+1) % map->capacity;
      |         ^~
hashmap.c:47:67: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |         if (is_equal(key, map->buckets[index]->key) == 1) return; index= (index+1) % map->capacity;
      |                                                                   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
7a98aa6
Sat 10 Sep 2022 01:55:16 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
b19420b
Sat 10 Sep 2022 01:57:34 AM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  17|0
total_score: 70/70
768b36d
Sat 10 Sep 2022 02:02:02 AM UTC: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  17|0
total_score: 70/70
cb90eff
